# commander_api

./: .gitignore  commander_api.code-workspace  pyproject.toml
commander_api/: manage.py
commander_api/apps/image_processor/: apps.py  urls.py
commander_api/apps/image_processor/components/: component1.py  component2.py  registry.py
commander_api/apps/image_processor/forms/: background_remover.py  image_cropper.py
commander_api/apps/image_processor/static/css/widgets/: image_background_remover.css  image_cropper.css  image_file_upload.css
commander_api/apps/image_processor/static/js/widgets/: image_background_remover.js  image_cropper.js  (+1 more)
commander_api/apps/image_processor/templatetags/: component_tags.py
commander_api/apps/image_processor/views/: background_remover.py  image_cropper.py
commander_api/apps/image_processor/widgets/: image_background_remover.py  image_cropper.py  image_file_upload.py  utils.py
commander_api/apps/timekeeper/: apps.py  serializers.py  urls.py
commander_api/apps/timekeeper/api/: event_record.py
commander_api/apps/timekeeper/migrations/: 0001_initial.py
commander_api/apps/timekeeper/models/: __init__.py  event_record.py
commander_api/apps/timekeeper/views/: crud.py
commander_api/commander_api/: asgi.py  urls.py  wsgi.py
commander_api/commander_api/settings/: __init__.py  base.py  development.py  keys.py  production.py  rest_framework.py
commander_api/commander_api/static/css/: admin_overrides.css
commander_api/commander_api/templates/: base.html
commander_api/commander_api/templates/admin/: base_site.html
(+6 files in other folders)
