[tool.poetry]
name = "commander_api"
version = "0.1.0"
description = "A REST API for command actions."
authors = ["ndelucca <ndelucca@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
daphne = "^4.0.0"
django-debug-toolbar = "^4.2.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
