[tool.poetry]
name = "commander_api"
version = "0.1.0"
description = "A REST API for command actions."
authors = ["ndelucca <ndelucca@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5"
djangorestframework = "^3"
drf-spectacular = "^0.27.1"
daphne = "^4"
django-debug-toolbar = "^4"
mysqlclient = "^2"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8"
djlint = "1.34.1"
