[tool.poetry]
name = "commander_api"
version = "0.1.0"
description = "A REST API for command actions."
authors = ["ndelucca <ndelucca@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Django = "^5"

# asgi
daphne = "^4"

# common
mysqlclient = "^2"

# image_processor app
pillow = "^10.2.0"
rembg = "^2.0.56"

# apis
django-ninja = "^1.1.0"
pydantic = "^2.7.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^4"
pytest = "^8"
djlint = "1.34.1"
